Added scripts and ignition qt app
1. ignition/ - this is the ignition qt based application
2. scripts/ - firmwares, binaries that were not found in buildroot and scripts.

Signed-off-by: Rabeeh Khoury <rabeeh@solid-run.com>

--- a/scripts/ignition_defconfig
+++ b/scripts/ignition_defconfig
@@ -378,12 +378,19 @@ BR2_PACKAGE_SYSTEMD=y
 BR2_PACKAGE_SYSTEMD_COMPAT=y
 BR2_PACKAGE_UTIL_LINUX=y
 BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
+BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-
-
+BR2_PACKAGE_UTIL_LINUX_BINARIES=y
+BR2_PACKAGE_UTIL_LINUX_CRAMFS=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_NONE=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
+BR2_PACKAGE_UTIL_LINUX_FALLOCATE=y
+BR2_PACKAGE_UTIL_LINUX_FSCK=y
+BR2_PACKAGE_UTIL_LINUX_KILL=y
+BR2_PACKAGE_UTIL_LINUX_MOUNT=y
+BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT=y
+BR2_PACKAGE_UTIL_LINUX_PARTX=y
 
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BOARDNAME="mx6_cubox-i"
